fix(filmstrip-only): vertically align center the toolbar (#1700)
* fix(filmstrip-only): vertically align center the toolbar

Use top 50% to position the toolbar's top at the vertical center
of the iframe. Then use transform 50% to move the toolbar itself
up 50% so its middle matches the middle of the iframe.

* squash: toolbox should center with filmstrip

--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -195,11 +195,8 @@
      */
     &_filmstrip-only {
         border-radius: 3px;
-        bottom: 0;
         display: inline-block;
         height: auto;
-        position: absolute;
-        right: 0;
         width: $defaultFilmStripOnlyToolbarSize;
 
         .button {
@@ -225,6 +222,14 @@
         bottom: 9px;
         position: absolute;
         right: 9px;
+    }
+}
+
+.filmstrip-only {
+    .toolbox,
+    .toolbox-toolbars {
+        align-items: center;
+        display: flex;
     }
 }
 
